[package]
name = "forgeconf"
description = "Declarative configuration loader for Rust structs powered by attribute macros."
version = "0.2.0"
edition = "2021"
authors = ["Chiko <chiko@envs.net>"]
license = "MIT"
keywords = ["configuration", "macro", "toml", "yaml", "json"]
readme = "../README.md"
repository = "https://github.com/chikof/forgeconf"

[features]
default = ["toml", "yaml", "cli", "validators", "parse"]
toml = ["forgeconf_macros/toml", "forgeconf_core/toml"]
yaml = ["forgeconf_macros/yaml", "forgeconf_core/yaml"]
json = ["forgeconf_macros/json", "forgeconf_core/json"]
regex = ["forgeconf_core/regex"]
cli = ["forgeconf_core/cli"]
validators = ["forgeconf_core/validators"]
parse = ["forgeconf_core/parse"]

[dependencies]
forgeconf_macros = { version = "=0.2.0", path = "../forgeconf_macros" }
forgeconf_core = { version = "=0.2.0", path = "../forgeconf_core" }

[dev-dependencies]
regex = "1.11.1"
