[package]
name = "forgeconf"
description = "Declarative configuration loader for Rust structs powered by attribute macros."
version = "0.4.1"
edition = "2024"
authors = ["Chiko <chiko@envs.net>"]
license = "MIT"
keywords = ["configuration", "macro", "toml", "yaml", "json"]
readme = "../README.md"
repository = "https://github.com/chikof/forgeconf"

[features]
default = ["toml", "yaml", "cli", "validators", "parse"]
toml = ["forgeconf_macros/toml", "forgeconf_core/toml"]
yaml = ["forgeconf_macros/yaml", "forgeconf_core/yaml"]
json = ["forgeconf_macros/json", "forgeconf_core/json"]
regex = ["forgeconf_core/regex"]
cli = ["forgeconf_core/cli"]
validators = ["forgeconf_core/validators"]
parse = ["forgeconf_core/parse"]
miette = ["forgeconf_core/miette"]

[dependencies]
forgeconf_macros = { version = "=0.4.1", path = "../forgeconf_macros" }
forgeconf_core = { version = "=0.4.1", path = "../forgeconf_core" }

[dev-dependencies]
regex = "1.11.1"
criterion = "0.8.2"
config = "0.15.19"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "comparison"
path = "benches/main.rs"
harness = false
