[package]
name = "forgeconf_core"
description = "Runtime primitives powering the Forgeconf configuration macro."
version = "0.1.0"
edition = "2021"
authors = ["Chiko <chiko@envs.net>"]
license = "MIT"
repository = "https://github.com/chikof/forgeconf"
readme = "../README.md"

[features]
default = ["toml"]
toml = ["dep:toml"]
yaml = ["dep:yaml-rust2"]
json = ["dep:jzon"]

[dependencies]
thiserror = "2.0.12"
jzon = { version = "0.12.5", optional = true }
toml = { version = "0.8.19", optional = true }
yaml-rust2 = { version = "0.10.3", optional = true }

[dev-dependencies]
tempfile = "3.19.1"
