[package]
name = "forgeconf_core"
description = "Runtime primitives powering the Forgeconf configuration macro."
version = "0.2.0"
edition = "2021"
authors = ["Chiko <chiko@envs.net>"]
license = "MIT"
repository = "https://github.com/chikof/forgeconf"
readme = "../README.md"

[features]
default = ["toml", "regex"]
toml = ["dep:toml"]
yaml = ["dep:yaml-rust2"]
json = ["dep:jzon"]
regex = ["dep:regex"]

[dependencies]
thiserror = "2.0.17"
jzon = { version = "0.12.5", optional = true }
toml = { version = "0.9.11", optional = true }
yaml-rust2 = { version = "0.11.0", optional = true }
regex = { version = "1.11.1", optional = true }

[dev-dependencies]
tempfile = "3.24.0"
