[package]
name = "forgeconf_macros"
description = "Procedural macro crate for Forgeconf."
version = "0.4.0"
edition = "2021"
authors = ["Chiko <chiko@envs.net>"]
license = "MIT"
repository = "https://github.com/chikof/forgeconf"
readme = "../README.md"

[features]
default = ["toml"]
toml = ["forgeconf_core/toml"]
yaml = ["forgeconf_core/yaml"]
json = ["forgeconf_core/json"]

[lib]
proc-macro = true

[dependencies]
forgeconf_core = { version = "=0.4.0", path = "../forgeconf_core" }
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full", "extra-traits"] }
thiserror = "2.0.18"
